--- a/MyLeasing.Web/appsettings.json
+++ b/MyLeasing.Web/appsettings.json
@@ -7,6 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-R9GB57TE\\SQLEXPRESS;Database=MyLeasing;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Tokens": {
+    "Key": "asdfghjikbns65df4s8d7rw21dvas5dq7weeee54w55www-no-hack-app-:D-vcgfdsrtfyhgcvgfxdgc",
+    "Issuer": "localhost",
+    "Audience": "users"
   }
-
 }
