--- a/MyLeasing.Prism/MyLeasing.Prism.Android/MyLeasing.Prism.Android.csproj
+++ b/MyLeasing.Prism/MyLeasing.Prism.Android/MyLeasing.Prism.Android.csproj
@@ -55,6 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator">
+      <Version>18.1.0.45</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator.Android">
+      <Version>18.1.0.45</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
