reset password, reovery password, create user

--- a/MyLeasing.Web/appsettings.json
+++ b/MyLeasing.Web/appsettings.json
@@ -12,5 +12,11 @@
     "Key": "asdfghjikbns65df4s8d7rw21dvas5dq7weeee54w55www-no-hack-app-:D-vcgfdsrtfyhgcvgfxdgc",
     "Issuer": "localhost",
     "Audience": "users"
+  },
+  "Mail": {
+    "From": "frajavi3@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "14621462"
   }
 }
